--- a/T1/SPRINT 1/Ejercicio 1/Ejercicio1.html
+++ b/T1/SPRINT 1/Ejercicio 1/Ejercicio1.html
@@ -10,7 +10,7 @@
 
 <body>
     <button id="colorButton">Cambiar color</button>
-    <script src="Ejercicio1.js"></script>
+    <script src="ejercicio1.js"></script>
 </body>
 
 </html>
