--- a/T1/SPRINT 1/Ejercicio 2/Ejercicio2.html
+++ b/T1/SPRINT 1/Ejercicio 2/Ejercicio2.html
@@ -22,7 +22,7 @@
         <p class="result" id="result">Área: --</p>
     </div>
 
-    <script src="Ejercicio2.js"></script>
+    <script src="ejercicio2.js"></script>
 </body>
 
 </html>
