--- a/T1/SPRINT 1/Ejercicio 3/ejercicio3.html
+++ b/T1/SPRINT 1/Ejercicio 3/ejercicio3.html
@@ -18,7 +18,7 @@
     <ul id="item-list"></ul>
 
     <!-- Script que contiene la funcionalidad -->
-    <script src="Ejercicio 3.js"></script>
+    <script src="ejercicio3.js"></script>
 </body>
 
 </html>
