--- a/T1/SPRINT 1/Ejercicio 4/ejercicio4.html
+++ b/T1/SPRINT 1/Ejercicio 4/ejercicio4.html
@@ -14,7 +14,7 @@
     <div class="hover-box" id="box2">Div 2: Hover sobre mí</div>
     <div class="hover-box" id="box3">Div 3: Hover sobre mí</div>
 
-    <script src="Ejercicio 4.js"></script>
+    <script src="ejercicio4.js"></script>
 </body>
 
 </html>
