--- a/T1/SPRINT 1/Ejercicio 5/ejercicio5.html
+++ b/T1/SPRINT 1/Ejercicio 5/ejercicio5.html
@@ -26,7 +26,7 @@
 
     <p id="reconocimiento"></p>
 
-    <script src="Ejercicio 5.js"></script>
+    <script src="ejercicio5.js"></script>
 </body>
 
 </html>
